2010-10-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed the function get_agentmodule_id
	to avoid the pending_delete modules

2010-10-08  Sergio Martin <sergio.martin@artica.es>

	*  godmode/agentes/module_manager_editor_common.php
	 godmode/agentes/module_manager_editor.php: Fixed SQL 
	 error when try to create a module called 0

2010-10-08  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_action_alerts.php: Added simple and
	compound alerts selections.

	* include/functions_alerts.php: Added new function, get_alert_compounds().

2010-10-07  Sancho Lerena <slerena@artica.es>

        * godmode/alerts/alert_list.list.php: Another ugly warning fixed due 
        an undefined array. PLEASE dont use foreach on arrays non-checked !

	* godmode/agentes/configurar_agente.php: Added custom fields to the global
	edit/insert code. Not really used here, but for the future.

	* godmode/modules/module_list.php: Show ID of modules, useful information.

2010-10-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/calendar.js, include/javascript/jquery.colorpicker.js:
	fixed end of sentences with lost semicolons, the Eclipse IDE warned me some
	this bugs.
	
	* include/javascript/jquery.timeentry.js, include/help/en/help_wmiquery.php,
	include/help/en/help_tcp_send.php, include/help/en/help_web_checks.php,
	include/help/es/help_date_format.php, include/help/es/help_tcp_send.php,
	include/help/es/help_agent_status.php, include/help/es/help_eventview.php,
	include/help/es/help_configure_gis_map.php,
	include/help/es/help_web_checks.php,
	include/help/es/help_plugin_definition.php,
	include/help/es/help_alert_macros.php, include/help/ja/help_wmiquery.php,
	include/help/ja/help_date_format.php,
	include/help/ja/help_alert-matches.php, include/help/ja/help_tcp_send.php,
	include/help/ja/help_agent_status.php, include/help/ja/help_eventview.php,